--- a/plugin-launcher/src/main/resources/META-INF/plugin.xml
+++ b/plugin-launcher/src/main/resources/META-INF/plugin.xml
@@ -10,8 +10,8 @@
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    Enter short description for your plugin here.<br>
-    <em>most HTML tags may be used</em>
+    A plugin for launching applications using saved Spring Boot run configurations in IntelliJ IDEA Community Edition.<br>
+    Learn more about run configurations on the <a href="https://www.jetbrains.com/help/idea/run-debug-configuration.html#create-folder-run-config">JetBrains website<a/>.<br>
   ]]></description>
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
